[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/ui/screens/UIScreenBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/screens/UIHelper.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/components/ConsolePanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/themes/MenuTheme.tres" type="Theme" id=4]
[ext_resource path="res://resources/themes/ShipMenuTheme.tres" type="Theme" id=5]
[ext_resource path="res://resources/fonts/ScreenTitleFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://scripts/ui/screens/ShopScreen.gd" type="Script" id=7]
[ext_resource path="res://resources/style_boxes/ConsolePanel.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/images/sprite_sheet.png" type="Texture" id=9]
[ext_resource path="res://resources/fonts/SubtitleFont.tres" type="DynamicFont" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.12549, 0.0823529, 0.176471, 0.588235 )
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.449295, 0.420089, 0.494336, 0.705882 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 144, 160, 16, 16 )
margin = Rect2( 1, 1, 0, 0 )

[node name="ShopScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 7 )

[node name="UIScreenBackground" parent="." instance=ExtResource( 1 )]

[node name="UIHelper" parent="." instance=ExtResource( 2 )]

[node name="ConsolePanel" parent="." instance=ExtResource( 3 )]

[node name="LeftPanel" type="VBoxContainer" parent="ConsolePanel"]
anchor_left = 0.07
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.95
custom_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="ConsolePanel/LeftPanel"]
margin_right = 352.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
text = "Shop"
align = 1

[node name="Label2" type="Label" parent="ConsolePanel/LeftPanel"]
margin_top = 58.0
margin_right = 352.0
margin_bottom = 113.0
text = "What would you like to buy? what do you want to sell?"
align = 1
autowrap = true

[node name="Menu" type="VBoxContainer" parent="ConsolePanel/LeftPanel"]
margin_top = 133.0
margin_right = 352.0
margin_bottom = 432.0
size_flags_vertical = 3
theme = ExtResource( 5 )
alignment = 1

[node name="MintButton" type="Button" parent="ConsolePanel/LeftPanel/Menu" groups=["button"]]
margin_top = 70.0
margin_right = 352.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 50 )
text = "  Mint to Me"
align = 0

[node name="SentButton" type="Button" parent="ConsolePanel/LeftPanel/Menu" groups=["button"]]
margin_top = 124.0
margin_right = 352.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 50 )
text = "  Send to Game"
align = 0

[node name="BackButton" type="Button" parent="ConsolePanel/LeftPanel/Menu" groups=["button"]]
margin_top = 178.0
margin_right = 352.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 50 )
text = "  Back"
align = 0

[node name="RightPanel" type="Panel" parent="ConsolePanel"]
anchor_left = 0.55
anchor_top = 0.05
anchor_right = 0.97
anchor_bottom = 0.95
margin_left = 3.05176e-05
margin_right = 6.10352e-05
custom_styles/panel = ExtResource( 8 )

[node name="Content" type="Control" parent="ConsolePanel/RightPanel"]
anchor_left = 0.07
anchor_top = 0.05
anchor_right = 0.93
anchor_bottom = 0.75

[node name="Console" type="Panel" parent="ConsolePanel/RightPanel"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="ConsolePanel/RightPanel/Console"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9
alignment = 1

[node name="ElixiriteIcon" type="TextureRect" parent="ConsolePanel/RightPanel/Console/HBoxContainer"]
margin_left = 34.0
margin_right = 134.0
margin_bottom = 69.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
texture = SubResource( 2 )
stretch_mode = 6

[node name="QuantityLabel" type="Label" parent="ConsolePanel/RightPanel/Console/HBoxContainer"]
margin_left = 138.0
margin_top = 9.0
margin_right = 274.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 6 )
text = "* 1000"

[node name="BalanceTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="ConsolePanel/LeftPanel/Menu/MintButton" to="." method="_on_MintButton_pressed"]
[connection signal="pressed" from="ConsolePanel/LeftPanel/Menu/SentButton" to="." method="_on_SentButton_pressed"]
[connection signal="pressed" from="ConsolePanel/LeftPanel/Menu/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="timeout" from="BalanceTimer" to="." method="_on_BalanceTimer_timeout"]
